# django-js-asset

./: .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
js_asset/: __init__.py  _compat.py  importmap.py  js.py  media.py
js_asset/contrib/: __init__.py  csp.py
tests/: cov.sh
tests/testapp/: settings.py  test_csp.py  test_importmap.py  test_js_asset.py  test_media.py
