[metadata]
name = django_js_asset
version = attr: js_asset.__version__
description = script tag with additional attributes for django.forms.Media
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/matthiask/django-js-asset/
author = Matthias Kestenholz
author_email = mk@feinheit.ch
license = BSD-3-Clause
license_file = LICENSE
platforms = OS Independent
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
install_requires =
    Django
include_package_data = True
tests_require =
    Django
    coverage
    pytz
zip_safe = False

[options.extras_require]
tests =
    coverage

[options.packages.find]
exclude = tests

[flake8]
exclude = venv,build,docs,.tox
ignore = E203,W503
max-complexity = 10
max-line-length = 88

[bdist_wheel]
universal = 1

[coverage:run]
branch = True
include =
    *js_asset*
omit =
    *migrations*
    *tests*
    *.tox*
